#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([cupscloudprint], [20110909], [src@niftiestsoftware.com])
AC_PROG_INSTALL
AC_PATH_PROG(ppdcpath,ppdc,[missing])
if test "${ppdcpath}" = "missing"; then
	AC_MSG_ERROR([cannot find ppdc])
fi

AC_PATH_PROG(cupsconfpath,cups-config,[missing])
if test "${cupsconfpath}" = "missing"; then
	AC_MSG_ERROR([cannot find cups-config])
fi

AC_SUBST(cupsserverpath, [`cups-config --serverbin`])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES()
AC_OUTPUT(Makefile)
