#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([cupscloudprint], [20130120], [src@niftiestsoftware.com])
AC_ARG_VAR(cupsgroup, Name of the cups system group)
AC_PROG_INSTALL

AC_PATH_PROG(cupsconfpath,cups-config,[missing])
if test "${cupsconfpath}" = "missing"; then
	AC_MSG_ERROR([cannot find cups-config])
fi
AC_ARG_ENABLE([X],
  AS_HELP_STRING([--enable-X],
    [enable GUI tools])
)
AC_SUBST(enable_gui, ${enable_X})
  
AC_SUBST(cupsserverpath, [`cups-config --serverbin`])
AC_SUBST(cupsdatapath, [`cups-config --datadir`])

if test "${cupsgroup}" = ""; then
	# configure group
	AC_SUBST(lpgroupexists, [`grep -w -c lp /etc/group`])
	if test "${lpgroupexists}" = "0"; then
		AC_SUBST(cupsgroupexists, [`grep -w -c cups /etc/group`])
		if test "${cupsgroupexists}" = "0"; then
			AC_SUBST(ulpgroupexists, [`grep -w -c _lp /etc/group`])
			if test "${ulpgroupexists}" = "0"; then
				AC_MSG_ERROR([cannot identify cups group, specify with 'cupsgroup' environmental variable])
			else
				AC_SUBST(cupsgroup, "_lp")
			fi
		else
			AC_SUBST(cupsgroup, "cups")
		fi
	else
		AC_SUBST(cupsgroup, "lp")
	fi
fi

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES()
AC_OUTPUT(Makefile)
